new package.json file

--- a/package.json
+++ b/package.json
@@ -1,32 +1,491 @@
 {
-    "name": "nextjs-nft-marketplace-fcc",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
-        "export": "next export",
-        "moralis:sync": "moralis-admin-cli connect-local-devchain --chain hardhat --moralisSubdomain wciosc5v5doe.usemoralis.com --frpcPath ./frp/frpc",
-        "moralis:cloud": "moralis-admin-cli watch-cloud-folder --moralisSubdomain wciosc5v5doe.usemoralis.com --autoSave 1 --moralisCloudfolder ./cloudFunctions"
-    },
-    "dependencies": {
-        "@apollo/client": "3.5.10",
-        "graphql": "^16.4.0",
-        "moralis": "^1.5.11",
-        "next": "12.1.5",
-        "react": "18.1.0",
-        "react-dom": "18.1.0",
-        "react-moralis": "^1.3.5",
-        "web3uikit": "^0.0.133"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.5",
-        "dotenv": "^16.0.0",
-        "eslint": "8.14.0",
-        "eslint-config-next": "12.1.5",
-        "postcss": "^8.4.12",
-        "tailwindcss": "^3.0.24"
-    }
+  "name": "thegraph-frontend",
+  "version": "1.0.0",
+  "description": "1. TheGraph",
+  "main": "next.config.js",
+  "dependencies": {
+    "acorn": "^7.4.1",
+    "abstract-leveldown": "^2.6.3",
+    "aes-js": "^3.0.0",
+    "JSONStream": "^1.3.5",
+    "acorn-walk": "^7.2.0",
+    "ajv-keywords": "^3.5.2",
+    "arg": "^5.0.2",
+    "ansi-regex": "^4.1.1",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^3.1.2",
+    "assert-plus": "^1.0.0",
+    "asn1": "^0.2.6",
+    "asn1.js": "^5.4.1",
+    "assert": "^2.0.0",
+    "acorn-node": "^1.8.2",
+    "async-eventemitter": "^0.2.4",
+    "ajv": "^6.12.6",
+    "async": "^2.6.4",
+    "asynckit": "^0.4.0",
+    "autoprefixer": "^10.4.13",
+    "aws-sign2": "^0.7.0",
+    "async-limiter": "^1.0.1",
+    "async-mutex": "^0.3.2",
+    "aws4": "^1.11.0",
+    "babel-plugin-polyfill-corejs2": "^0.3.3",
+    "babel-plugin-polyfill-corejs3": "^0.6.0",
+    "babel-plugin-polyfill-regenerator": "^0.4.1",
+    "available-typed-arrays": "^1.0.5",
+    "axios": "^0.27.2",
+    "bcrypt-pbkdf": "^1.0.2",
+    "base-x": "^3.0.9",
+    "base64-js": "^1.5.1",
+    "base64url": "^3.0.1",
+    "bindings": "^1.5.0",
+    "bech32": "^1.1.4",
+    "binary-extensions": "^2.2.0",
+    "bignumber.js": "^9.1.0",
+    "backoff": "^2.5.0",
+    "bip66": "^1.1.5",
+    "bn.js": "^5.2.1",
+    "brorand": "^1.1.0",
+    "blakejs": "^1.2.1",
+    "bigint-buffer": "^1.1.5",
+    "browserify-rsa": "^4.1.0",
+    "browserify-cipher": "^1.0.1",
+    "braces": "^3.0.2",
+    "browserify-aes": "^1.2.0",
+    "browserify-des": "^1.0.2",
+    "bs58": "^4.0.1",
+    "browserify-sign": "^4.2.1",
+    "borsh": "^0.7.0",
+    "buffer-alloc": "^1.2.0",
+    "buffer-alloc-unsafe": "^1.1.0",
+    "buffer-fill": "^1.0.0",
+    "bowser": "^2.11.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer-from": "^1.1.2",
+    "bs58check": "^2.1.2",
+    "btoa": "^1.2.1",
+    "buffer": "^6.0.1",
+    "browserslist": "^4.21.4",
+    "builtin-status-codes": "^3.0.0",
+    "buffer-xor": "^1.0.3",
+    "caniuse-lite": "^1.0.30001430",
+    "call-bind": "^1.0.2",
+    "caseless": "^0.12.0",
+    "checkpoint-store": "^1.1.0",
+    "bufferutil": "^4.0.7",
+    "camelcase": "^5.3.1",
+    "chrome-trace-event": "^1.0.3",
+    "cipher-base": "^1.0.4",
+    "classnames": "^2.3.2",
+    "client-only": "^0.0.1",
+    "cliui": "^5.0.0",
+    "chalk": "^2.4.2",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "chokidar": "^3.5.3",
+    "constants-browserify": "^1.0.0",
+    "clone": "^2.1.2",
+    "cookiejar": "^2.1.3",
+    "color-convert": "^1.9.3",
+    "commander": "^2.20.3",
+    "core-js-compat": "^3.26.0",
+    "convert-source-map": "^1.9.0",
+    "core-util-is": "^1.0.2",
+    "camelcase-css": "^2.0.1",
+    "copy-to-clipboard": "^3.3.2",
+    "console-browserify": "^1.2.0",
+    "core-js-pure": "^3.26.0",
+    "crc-32": "^1.2.2",
+    "create-ecdh": "^4.0.4",
+    "create-hash": "^1.2.0",
+    "create-hmac": "^1.1.7",
+    "dashdash": "^1.14.1",
+    "create-require": "^1.1.1",
+    "cross-fetch": "^2.2.6",
+    "cssesc": "^3.0.0",
+    "debug": "^4.3.4",
+    "decamelize": "^1.2.0",
+    "decode-uri-component": "^0.2.0",
+    "crypto-js": "^4.1.1",
+    "deferred-leveldown": "^1.2.2",
+    "delayed-stream": "^1.0.0",
+    "define-properties": "^1.1.4",
+    "defined": "^1.0.1",
+    "detect-node": "^2.1.0",
+    "delay": "^5.0.0",
+    "didyoumean": "^1.2.2",
+    "des.js": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "detect-browser": "^5.2.0",
+    "dom-walk": "^0.1.2",
+    "diff": "^4.0.2",
+    "detective": "^5.2.1",
+    "domain-browser": "^4.22.0",
+    "dijkstrajs": "^1.0.2",
+    "dlv": "^1.1.3",
+    "diffie-hellman": "^5.0.3",
+    "end-of-stream": "^1.4.4",
+    "ecc-jsbn": "^0.1.2",
+    "engine.io-client": "^6.2.3",
+    "engine.io-parser": "^5.0.4",
+    "enhanced-resolve": "^5.10.0",
+    "elliptic": "^6.5.4",
+    "errno": "^0.1.8",
+    "drbg.js": "^1.0.1",
+    "electron-to-chromium": "^1.4.284",
+    "es-module-lexer": "^0.9.3",
+    "es6-object-assign": "^1.1.0",
+    "emoji-regex": "^7.0.3",
+    "es6-promise": "^4.2.8",
+    "es6-promisify": "^5.0.0",
+    "escape-string-regexp": "^1.0.5",
+    "eslint-scope": "^5.1.1",
+    "escalade": "^3.1.1",
+    "esrecurse": "^4.3.0",
+    "eth-query": "^2.1.2",
+    "estraverse": "^4.3.0",
+    "eth-block-tracker": "^4.4.3",
+    "eth-json-rpc-infura": "^5.1.0",
+    "eth-json-rpc-middleware": "^6.0.0",
+    "ethereum-common": "^0.2.0",
+    "eth-json-rpc-filters": "^4.2.2",
+    "ethereum-bloom-filters": "^1.0.10",
+    "eth-rpc-errors": "^4.0.3",
+    "eth-sig-util": "^1.4.2",
+    "ethereum-cryptography": "^0.1.3",
+    "ethereumjs-account": "^2.0.5",
+    "ethereumjs-block": "^1.7.1",
+    "ethereumjs-common": "^1.5.2",
+    "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-util": "^7.1.5",
+    "ethereumjs-vm": "^2.6.0",
+    "eventemitter3": "^4.0.7",
+    "ethjs-util": "^0.1.6",
+    "ethers": "^5.7.2",
+    "ethjs-unit": "^0.1.6",
+    "eyes": "^0.1.8",
+    "evp_bytestokey": "^1.0.3",
+    "fake-merkle-patricia-tree": "^1.0.1",
+    "extsprintf": "^1.3.0",
+    "ethereumjs-abi": "^0.6.8",
+    "extend": "^3.0.2",
+    "fast-glob": "^3.2.12",
+    "fast-deep-equal": "^3.1.3",
+    "events": "^3.3.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "filter-obj": "^2.0.2",
+    "fast-safe-stringify": "^2.1.1",
+    "fastq": "^1.13.0",
+    "find-up": "^3.0.0",
+    "forever-agent": "^0.6.1",
+    "follow-redirects": "^1.15.2",
+    "for-each": "^0.3.3",
+    "file-uri-to-path": "^1.0.0",
+    "fast-stable-stringify": "^1.0.0",
+    "fill-range": "^7.0.1",
+    "form-data": "^4.0.0",
+    "fraction.js": "^4.2.0",
+    "getpass": "^0.1.7",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.2",
+    "functional-red-black-tree": "^1.0.1",
+    "gopd": "^1.0.1",
+    "glob-to-regexp": "^0.4.1",
+    "globals": "^11.12.0",
+    "get-intrinsic": "^1.1.3",
+    "get-caller-file": "^2.0.5",
+    "global": "^4.4.0",
+    "glob-parent": "^6.0.2",
+    "graphql": "^16.6.0",
+    "graceful-fs": "^4.2.10",
+    "has-flag": "^3.0.0",
+    "graphql-tag": "^2.12.6",
+    "har-validator": "^5.1.5",
+    "har-schema": "^2.0.0",
+    "has": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "has-property-descriptors": "^1.0.0",
+    "hash-base": "^3.1.0",
+    "has-tostringtag": "^1.0.0",
+    "hash.js": "^1.1.7",
+    "https-browserify": "^1.0.0",
+    "hmac-drbg": "^1.0.1",
+    "is-binary-path": "^2.1.0",
+    "inherits": "^2.0.4",
+    "ieee754": "^1.2.1",
+    "hoist-non-react-statics": "^3.3.2",
+    "http-signature": "^1.2.0",
+    "is-arguments": "^1.1.1",
+    "immediate": "^3.3.0",
+    "immer": "^9.0.16",
+    "is-fn": "^1.0.0",
+    "is-callable": "^1.2.7",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-core-module": "^2.11.0",
+    "is-function": "^1.0.2",
+    "is-number": "^7.0.0",
+    "is-generator-function": "^1.0.10",
+    "is-nan": "^1.3.2",
+    "is-stream": "^2.0.1",
+    "is-typedarray": "^1.0.0",
+    "is-hex-prefixed": "^1.0.0",
+    "isomorphic-ws": "^4.0.1",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-typed-array": "^1.1.10",
+    "isarray": "^2.0.5",
+    "js-tokens": "^4.0.0",
+    "isstream": "^0.1.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-rpc-random-id": "^1.0.1",
+    "jayson": "^3.7.0",
+    "json-schema": "^0.4.0",
+    "jsbn": "^0.1.1",
+    "js-sha3": "^0.8.0",
+    "jest-worker": "^27.5.1",
+    "json-rpc-engine": "^6.1.0",
+    "jsonschema": "^1.4.1",
+    "jsesc": "^2.5.2",
+    "json-schema-traverse": "^0.4.1",
+    "jsprim": "^1.4.2",
+    "jsonify": "^0.0.1",
+    "jwt-decode": "^3.1.2",
+    "jsonparse": "^1.3.1",
+    "json-stable-stringify": "^1.0.2",
+    "json-stringify-safe": "^5.0.1",
+    "level-codec": "^7.0.1",
+    "json5": "^2.2.1",
+    "keyvaluestorage-interface": "^1.0.0",
+    "level-iterator-stream": "^1.3.1",
+    "keccak": "^3.0.2",
+    "level-errors": "^1.0.5",
+    "locate-path": "^3.0.0",
+    "level-ws": "^0.0.0",
+    "levelup": "^1.3.9",
+    "lilconfig": "^2.0.6",
+    "loader-runner": "^4.3.0",
+    "lodash.merge": "^4.6.2",
+    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
+    "merge-stream": "^2.0.0",
+    "merge2": "^1.4.1",
+    "lodash-es": "^4.17.21",
+    "ltgt": "^2.2.1",
+    "loglevel": "^1.8.1",
+    "md5.js": "^1.3.5",
+    "micromatch": "^4.0.5",
+    "make-error": "^1.3.6",
+    "miller-rabin": "^4.0.1",
+    "mime-db": "^1.52.0",
+    "minimalistic-assert": "^1.0.1",
+    "minimalistic-crypto-utils": "^1.0.1",
+    "mime-types": "^2.1.35",
+    "ms": "^2.1.2",
+    "loose-envify": "^1.4.0",
+    "memdown": "^1.4.1",
+    "min-document": "^2.19.0",
+    "merkle-patricia-tree": "^2.3.2",
+    "moralis": "^2.7.1",
+    "neo-async": "^2.6.2",
+    "nan": "^2.17.0",
+    "moralis-v1": "^1.12.0",
+    "minimist": "^1.2.7",
+    "node-releases": "^2.0.6",
+    "node-fetch": "^2.6.7",
+    "nanoid": "^3.3.4",
+    "next": "^13.0.2",
+    "oauth-sign": "^0.9.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "normalize-path": "^3.0.0",
+    "node-gyp-build": "^4.5.0",
+    "normalize-range": "^0.1.2",
+    "object-assign": "^4.1.1",
+    "object-is": "^1.1.5",
+    "object-hash": "^3.0.0",
+    "node-addon-api": "^2.0.2",
+    "once": "^1.4.0",
+    "p-limit": "^2.3.0",
+    "object-keys": "^1.1.1",
+    "oblivious-set": "^1.1.1",
+    "os-browserify": "^0.3.0",
+    "optimism": "^0.16.2",
+    "pako": "^1.0.11",
+    "path-exists": "^3.0.0",
+    "p-locate": "^3.0.0",
+    "p-try": "^2.2.0",
+    "path-parse": "^1.0.7",
+    "path-browserify": "^1.0.1",
+    "parse-headers": "^2.0.5",
+    "number-to-bn": "^1.7.0",
+    "parse-asn1": "^5.1.6",
+    "picocolors": "^1.0.0",
+    "pbkdf2": "^3.1.2",
+    "performance-now": "^2.1.0",
+    "picomatch": "^2.3.1",
+    "pify": "^2.3.0",
+    "pngjs": "^3.4.0",
+    "postcss-nested": "^6.0.0",
+    "postcss": "^8.4.18",
+    "postcss-load-config": "^3.1.4",
+    "postcss-selector-parser": "^6.0.10",
+    "postcss-js": "^4.0.0",
+    "postcss-import": "^14.1.0",
+    "precond": "^0.2.3",
+    "process": "^0.11.10",
+    "process-nextick-args": "^2.0.1",
+    "prr": "^1.0.1",
+    "postcss-value-parser": "^4.2.0",
+    "preact": "^10.4.1",
+    "promise-to-callback": "^1.0.0",
+    "prop-types": "^15.8.1",
+    "pump": "^3.0.0",
+    "qr.js": "^0.0.0",
+    "psl": "^1.9.0",
+    "public-encrypt": "^4.0.3",
+    "query-string": "^6.13.5",
+    "queue-microtask": "^1.2.3",
+    "querystring-es3": "^0.2.1",
+    "quick-lru": "^5.1.1",
+    "qs": "^6.5.3",
+    "react-blockies": "^1.4.1",
+    "punycode": "^2.1.1",
+    "randombytes": "^2.1.0",
+    "qrcode": "^1.4.4",
+    "randomfill": "^1.0.4",
+    "querystring": "^0.2.0",
+    "read-cache": "^1.0.0",
+    "react": "^18.2.0",
+    "react-native-crypto-js": "^1.0.0",
+    "react-router": "^6.4.3",
+    "react-is": "^16.13.1",
+    "react-router-dom": "^6.4.3",
+    "react-moralis": "^1.4.2",
+    "regenerator-runtime": "^0.13.10",
+    "react-dom": "^18.2.0",
+    "require-directory": "^2.1.1",
+    "readdirp": "^3.6.0",
+    "readable-stream": "^3.6.0",
+    "require-main-filename": "^2.0.0",
+    "request": "^2.88.2",
+    "response-iterator": "^0.2.6",
+    "resolve": "^1.22.1",
+    "ripemd160": "^2.0.2",
+    "reusify": "^1.0.4",
+    "rlp": "^2.2.7",
+    "rpc-websockets": "^7.5.0",
+    "safe-buffer": "^5.2.1",
+    "safe-event-emitter": "^1.0.1",
+    "safer-buffer": "^2.1.2",
+    "scheduler": "^0.23.0",
+    "run-parallel": "^1.2.0",
+    "scrypt-js": "^3.0.1",
+    "rustbn.js": "^0.2.0",
+    "rxjs": "^7.5.7",
+    "secp256k1": "^4.0.3",
+    "semaphore": "^1.1.0",
+    "semver": "^6.3.0",
+    "set-immediate-shim": "^1.0.1",
+    "schema-utils": "^3.1.1",
+    "setimmediate": "^1.0.5",
+    "serialize-javascript": "^6.0.0",
+    "set-blocking": "^2.0.0",
+    "split-on-first": "^1.1.0",
+    "socket.io-client": "^4.5.3",
+    "socket.io-parser": "^4.2.1",
+    "sha.js": "^2.4.11",
+    "source-map": "^0.6.1",
+    "sshpk": "^1.17.0",
+    "strict-uri-encode": "^2.0.0",
+    "string-width": "^3.1.0",
+    "source-map-js": "^1.0.2",
+    "strip-ansi": "^5.2.0",
+    "stream-http": "^3.2.0",
+    "source-map-support": "^0.5.21",
+    "superstruct": "^0.14.2",
+    "string_decoder": "^1.3.0",
+    "strip-hex-prefix": "^1.0.0",
+    "styled-jsx": "^5.1.0",
+    "stream-browserify": "^3.0.0",
+    "supports-color": "^5.5.0",
+    "tapable": "^2.2.1",
+    "symbol-observable": "^4.0.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "text-encoding-utf-8": "^1.0.2",
+    "to-fast-properties": "^2.0.0",
+    "through2": "^2.0.5",
+    "toggle-selection": "^1.0.6",
+    "timers-browserify": "^2.0.12",
+    "terser": "^5.15.1",
+    "to-regex-range": "^5.0.1",
+    "tr46": "^0.0.3",
+    "tough-cookie": "^2.5.0",
+    "ts-custom-error": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "tunnel-agent": "^0.6.0",
+    "through": "^2.3.8",
+    "tty-browserify": "^0.0.1",
+    "tailwindcss": "^3.2.1",
+    "typed-emitter": "^2.1.0",
+    "ts-node": "^9.1.1",
+    "tweetnacl-util": "^0.15.1",
+    "typedarray-to-buffer": "^3.1.5",
+    "ts-invariant": "^0.10.3",
+    "typescript": "^4.8.4",
+    "uri-js": "^4.4.1",
+    "tslib": "^2.4.1",
+    "tweetnacl": "^1.0.3",
+    "update-browserslist-db": "^1.0.10",
+    "use-sync-external-store": "^1.2.0",
+    "url": "^0.11.0",
+    "unload": "^2.3.1",
+    "verror": "^1.10.0",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2",
+    "util-deprecate": "^1.0.2",
+    "utf-8-validate": "^5.0.10",
+    "uuid": "^8.3.2",
+    "utf8": "^3.0.0",
+    "web3-provider-engine": "^16.0.1",
+    "whatwg-fetch": "^2.0.4",
+    "watchpack": "^2.4.0",
+    "web3-eth-abi": "^1.8.0",
+    "web3uikit": "^1.0.4",
+    "webpack-sources": "^3.2.3",
+    "whatwg-url": "^5.0.0",
+    "webidl-conversions": "^3.0.1",
+    "wp5-cra-polyfill": "^0.0.1",
+    "which-module": "^2.0.0",
+    "webpack": "^5.75.0",
+    "wrappy": "^1.0.2",
+    "which-typed-array": "^1.1.9",
+    "xmlhttprequest": "^1.8.0",
+    "xhr2-cookies": "^1.1.0",
+    "wrap-ansi": "^5.1.0",
+    "ws": "^7.5.9",
+    "xmlhttprequest-ssl": "^2.0.0",
+    "y18n": "^4.0.3",
+    "xtend": "^4.0.2",
+    "yaml": "^1.10.2",
+    "yn": "^3.1.1",
+    "yargs-parser": "^13.1.2",
+    "web3-utils": "^1.8.0",
+    "xhr": "^2.6.0",
+    "zen-observable": "^0.8.15",
+    "zen-observable-ts": "^1.2.5",
+    "yargs": "^13.3.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kunal-Khatri-1/Hardhat-Nft-Marketplace-fcc-frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Kunal-Khatri-1/Hardhat-Nft-Marketplace-fcc-frontend/issues"
+  },
+  "homepage": "https://github.com/Kunal-Khatri-1/Hardhat-Nft-Marketplace-fcc-frontend#readme"
 }
